# fullstack

./: README.md  ai_instructions.txt  pyproject.toml
document/: document_api.py  document_context.py  log_document.py  mongo_db.py  readme.txt
frontend/: __init__.py  readme.md
frontend/components/: alerts.py  breadcrumb_mixin.py  element_.py  frame_.py  modal_.py
frontend/framework/: client_url.py  framework.py  register_routes.py
frontend/htmx/: __documentation.txt  client_supplied_field.py  get.py  htmx_notes.txt  htmx_redirect.py
frontend/utilities/: map_list.py  syntax_highlighting.py
fullstack/: __init__.py
fullstack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fullstack/document/: __init__.py  document.py  generate_collection_references.py  generate_document_info_registry.py  random_id.py  readme.txt  update_pointer.py
fullstack/frontend/: __init__.py
fullstack/typing/: __init__.py
fullstack/utilities/: setup_error.py  special_values.py
pylixir/: __init__.py
pylixir/document/: delete_user.py  document.py  document_id.py  document_info.py  generate_dbml.py  modify_bson_fields.py  update_method.py  update_pointer.py
pylixir/frontend/: __init__.py  readme.md
typing/: README.md
typing/bsonable_dataclass/: bsonable_dataclass.py  bsonable_dataclass_meta.py  register_bsonables_dataclasses.py
typing/bsonable_dict/: register_bsonable_dicts.py  validate_bsonable_dicts.py
typing/fields/: __documentation.txt  field_pointer.py  field_schema.py  get_field_name.py
utilities/: logger.py  result.py  undefined.py  validation_error.py
(+46 files in other folders)
